test_scores/negative_dimers/features/P78332.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P78332.pkl.xz